# todoist-scheduler

./: .dockerignore  .env-example  .gitignore  .tool-versions  CHANGELOG.md  Makefile  cli.py  docker-compose.yml  main.py  playground.py  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: build_and_publish.yml  repo-sync.yml
todoist_scheduler/: archive.py  cli.py  internet.py  main.py  patch.py  utils.py
