[tool.poetry]
name = "todoist-scheduler"
version = "0.3.2"
description = "Automatically reschedule tasks in Todoist to reduce the size of the todo lists you see each day."
authors = ["Michael Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/iloveitaly/todoist-scheduler"
keywords = ["todoist", "scheduler", "task", "management"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyjson5 = "^1.6.4"
todoist-api-python = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
pylint = "^2.17.5"
isort = "^5.12.0"
rich = "^13.6.0"

[tool.poetry.scripts]
todoist-scheduler = "todoist_scheduler:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
