[tool.poetry]
name = "todoist-scheduler"
version = "0.4.0"
description = "Automatically reschedule tasks in Todoist to reduce the size of the todo lists you see each day."
authors = ["Michael Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/iloveitaly/todoist-scheduler"
keywords = ["todoist", "scheduler", "task", "management"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyjson5 = "^1.6.5"
todoist-api-python = "^2.1.3"
backoff = "^2.2.1"
apscheduler = "^3.10.4"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
pylint = "^3.0.3"
isort = "^5.13.2"
rich = "^13.7.0"

[tool.poetry.scripts]
todoist-scheduler = "todoist_scheduler:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
